k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrmahesh-cms-service
  namespace: media
  labels:
    app: mrmahesh-cms
spec:
  type: ClusterIP
  selector:
    app: mrmahesh-cms
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
